# policy

./: .dockerignore  .editorconfig  .env.example  .flake8  .gitattributes  .gitignore  .kodiak.toml  .mypy.ini  .pre-commit-config.yaml  .releaserc.js  .rsync-filter  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  evaluate.py  plot_ablation_results.py  pyproject.toml  pytest.ini  run.py
.github/: dependabot.yml  labels.yml  release-drafter.yml  settings.yml
.github/workflows/: auto-assign.yml  build-image.yml  continuous-integration.yml  continuous_integration.yml  dependabot-automation.yml  labeler.yml  pr-lint.yml  release-drafter.yml  releases.yml  tests.yml
configs/: config.yaml
configs/callbacks/: default.yaml  wandb.yaml
configs/datamodule/: coco_captioning_datamodule.yaml  emma_datamodule.yaml  emma_test_datamodule.yaml  fake_datamodule.yaml  image_based_datamodule.yaml  refcoco_datamodule.yaml  teach_datamodule.yaml
configs/experiment/: coco_downstream.yaml  nlvr2_downstream.yaml  refcoco_downstream.yaml  simbot_combined.yaml  simbot_cr.yaml  simbot_downstream.yaml  simbot_nlu.yaml  vqa_v2_downstream.yaml
configs/logger/: wandb.yaml
configs/mode/: debug.yaml
configs/model/: coco_emma_base_model.yaml  coco_emma_small_model.yaml  emma_base_model.yaml  emma_small_model.yaml  emma_tiny_model.yaml  fake_model.yaml
configs/trainer/: ddp.yaml  debug.yaml  default.yaml
demos/: image_demo.py  video_demo.py
heriot-watt/emma-base/: config.json  merges.txt  special_tokens_map.json  tokenizer.json  tokenizer_config.json  vocab.json
heriot-watt/emma-base-action/: config.json
heriot-watt/emma-base-combined/: config.json
heriot-watt/emma-base-cr/: config.json
heriot-watt/emma-base-nlu/: config.json
heriot-watt/emma-base/emma/: merges.txt  special_tokens_map.json  tokenizer.json  tokenizer_config.json  vocab.json
heriot-watt/emma-small/: config.json  merges.txt  special_tokens_map.json  tokenizer.json  tokenizer_config.json
heriot-watt/emma-small-action/: config.json
heriot-watt/emma-small-combined/: config.json
heriot-watt/emma-tiny/: config.json  tokenizer.json
notebooks/: inspect_vqa_v2_results.ipynb  pretrained_app.py  simbot_annotation_tool.py  simbot_app.py  simbot_dataset_visualization_app.py  teach_attention_masks.ipynb
scripts/: create_fixtures_db.py  create_fixtures_splits.py  create_simbot_fixtures_db.py  download_features_for_db.py  downloader.sh  update_torch_cuda.py
scripts/slurm/: SLURM.md  job_multi_node.slurm
src/: __init__.py  train.py
src/callbacks/wandb/: __init__.py  watch_model.py
src/callbacks/wandb/log/: __init__.py  (+1 more)
src/datamodules/: __init__.py  fake_datamodule.py  fake_dataset.py
src/emma_policy/: __init__.py  _version.py  run_nlu.py  run_policy.py  test.py  train.py
src/emma_policy/api/: instrumentation.py
src/emma_policy/commands/: build_tokenizer.py  clean_simbot_db_from_unmatched_instances.py  create_pretrain_dbs.py  decode_images.py  find_simbot_centroid_features.py  get_ai2thor_object_vectors.py  plot_bb.py  plot_temperature_on_action_distribution.py  run_simbot_action_api.py  run_simbot_cr.py  run_simbot_nlu.py  run_teach_api.py
src/emma_policy/common/: __init__.py  settings.py
src/emma_policy/datamodules/: __init__.py  base_dataset.py  batch_attention_masks.py  coco_captioning_datamodule.py  coco_captioning_dataset.py  collate.py  emma_dataclasses.py  fake_datamodule.py  nlvr2_datamodule.py  nlvr2_dataset.py  pretrain_datamodule.py  pretrain_dataset.py  refcoco_datamodule.py  refcoco_dataset.py  relation.py  simbot_action_datamodule.py  simbot_action_dataset.py  simbot_combined_datamodule.py  simbot_cr_datamodule.py  simbot_cr_dataset.py  simbot_nlu_datamodule.py  simbot_nlu_dataset.py  teach_edh_datamodule.py  teach_edh_dataset.py  vqa_v2_datamodule.py  vqa_v2_dataset.py
src/emma_policy/inference/: __init__.py  actions.py  decoded_trajectory_parser.py
src/emma_policy/models/: __init__.py  boring_model.py  coco_emma_policy.py  configuration_emma.py  decoder_emma.py  embeddings_emma.py  emma_policy.py  encoder_decoder_emma.py  encoder_emma.py  encoder_layers.py  expand_mask.py  loss_utils.py  model_output_emma.py  modeling_emma.py  nlvr2_emma_policy.py  pretrained_emma.py  refcoco_emma_model.py  refcoco_emma_policy.py  seq_emma.py  simbot_combined_policy.py  simbot_cr_policy.py  simbot_emma_policy.py  simbot_nlu_policy.py  tokenizer_emma.py  tokenizer_emma_fast.py  vqa_v2_emma_model.py  vqa_v2_emma_policy.py
src/emma_policy/utils/: __init__.py  boxes.py  count_model_parameters.py  masks.py  nlvr2_metrics.py  refcoco_accuracy.py  simbot_action_metrics.py  simbot_cr_metrics.py  simbot_nlu_metrics.py  simbot_raw_text_matching.py  task_loss.py  vqa_v2_accuracy.py
src/models/: __init__.py
src/utils/: __init__.py
src/utils/logger/: __init__.py
storage/constants/: ai2thor_labels.json  ai2thor_vectors.pt  arena_definitions.json  simbot_low_level_examples.json  teach_default_definitions.json
storage/fixtures/: enabled_tasks.yaml  instances.db  instances_tiny_batch.db  pretrain.db
storage/fixtures/db/: simbot_instructions_train.db  simbot_instructions_valid.db
storage/fixtures/vl-t5-splits/: mscoco_resplit_train.json  mscoco_resplit_val.json
tests/: __init__.py  conftest.py  gfh_request.py  test_datamodule.py  test_enabled_tasks_handler.py  test_example.py  test_model.py  test_tokenizer.py  test_tokenizers.py  test_trainer.py
tests/datamodules/: test_datamodule_helpers.py  test_pretrain_datamodule.py  test_teach_edh_batch_creation.py  test_teach_edh_datamodule.py  test_teach_edh_dataset.py
tests/datasets/: test_teach_edh_datamodule.py  test_teach_edh_dataset.py
tests/fixtures/: datamodule.py  datamodules.py  enabled_tasks.py  instance_dbs.py  model.py  paths.py  teach_api.py  tokenizer.py
tests/inference/: test_decode_trajectory_for_domain.py  test_policy_model_wrapper.py  test_simbot_api.py  test_teach_api.py
tests/models/: test_decoder_attention.py  test_encoder_attention.py  test_pretrain_model.py  test_segmentation_masks.py  test_simbot_accuracy.py
(+644 files in other folders)
